<resources>
    <string name="app_name">Loyalty</string>
    <string name="login">Login</string>
    <string name="please_email">please input uid</string>
    <string name="please_pass">******</string>
    <string name="loyalty_programs">1.Loyalty Programs</string>
    <string name="business_employees">2.Users (Business Employees)</string>
    <string-array name="customers">
        <item>Record / Update Customer</item>
        <item>Customer - Search</item>
        <item>Customer - Find</item>
        <item>Customer - Information</item>
        <item>Customer - History</item>
    </string-array>
    <string name="transaction">4.Transaction</string>
    <string name="log_out">6.Log Out</string>
    <string name="lp">Loyalty Programs</string>
    <string name="ui">User Information</string>
    <string name="ruc">Record / Update Customer</string>
    <string name="campaigns_list">Campaigns List</string>
    <string name="users_list">Users List</string>
    <string name="deactivated_campaigns_list">Deactivated Campaigns List</string>
    <string name="no_data">no data</string>
    <string name="id">ID</string>
    <string name="hint">01234</string>
    <string name="name">NAME</string>
    <string name="type">TYPE</string>
    <string name="create_new_campaign">Create New Campaign</string>
    <string name="campaign_name">Campaign Name</string>
    <string name="points_ratio">Points Ratio</string>
    <string name="reward_ratio">Reward Ratio</string>
    <string name="amount_per_event">Amount Per Event</string>
    <string name="description">Description</string>
    <string name="no_null">Can not be empty</string>
    <string name="user_name">User Name</string>
    <string name="user_pass">User Password</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_custom">User Custom</string>
    <string name="user_pin">User PIN</string>
    <string name="language">Language</string>
    <string name="user_role">User Role</string>
    <string-array name="allowed_campaigns">
        <item>all</item>
        <item>campaigns</item>
        <item>none</item>
    </string-array>
    <string name="create_new_user">Create New User</string>
    <string name="customer_search">Customer - Search</string>
    <string name="english">English</string>
    <string name="admin">Administrator</string>
    <string name="timezone">Timezones</string>
    <string-array name="timezones">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
    </string-array>
    <string name="update_user_info">Update User Information</string>
    <string name="user_id">User Id</string>
    <string name="cs">Customers</string>
    <string-array name="customer_action">
        <item>new</item>
        <item>edit</item>
        <item>register</item>

    </string-array>
    <string name="n_str">new</string>
    <string name="card_number_str">Card Number</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street1">Street1</string>
    <string name="street2">Street2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="code">Code</string>
    <string name="auto_add">Auto Add</string>
    <string name="custom_field">Custom Field</string>
    <string name="customer_username">UserName</string>
    <string name="customer_password">Password</string>
    <string name="customer_PIN">PIN</string>
    <string name="not_included">not included</string>
    <string name="exact_match">exact_match</string>
    <string name="include_balances">include balances</string>
    <string name="n">N</string>
    <string name="search_hint">Click to expand / close the input box</string>
    <string name="todo">TODO</string>
    <string name="hide_custom_field">hide custom field</string>
    <string name="find_">Find</string>
    <string name="rc">Retrieve Customer</string>
    <string name="cf">Customer - Find</string>
    <string name="balance">BALANCE</string>
    <string name="cumulative">CUMULATIVE</string>
    <string name="balance_coalition">BALANCE COALITION</string>
    <string name="cumulative_coalition">CUMULATIVE COALITION</string>
    <string name="ch">CustomerHistory</string>
    <string-array name="transactions">
        <item>Transaction - Record</item>
        <item>Transaction - Redeem</item>
        <item>Transaction - Batch</item>
        <item>Transaction - Delete</item>
    </string-array>
    <string name="rct">Record Transaction</string>
    <string name="amount">Amount</string>
    <string name="rdt">Redemption Transaction</string>
    <string name="undo_the_transaction">Undo the transaction</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="please_input_transaction_id">please input transaction id</string>
    <string name="delete_a_transaction">Delete a Transaction</string>
    <string name="change_admin_password">CHANGE ADMIN PASSWORD</string>
    <string name="change_pass">Change Password</string>
    <string name="setting_lo">5.Setting</string>
    <string name="communication_paras">Communication paras</string>
    <string name="public_network_ip">NetWork IP</string>
    <string name="petrol_station">Petrol Station</string>
    <string name="please_enter_the_bonus_ratio">Please enter the bonus ratio</string>
    <string name="scale">scale</string>
    <string name="header">HEADER</string>
    <string name="title">TITLE</string>
    <string name="footer">FOOTER</string>
    <string name="save">Save</string>
    <string name="is_it_rewarding_activity">Is it rewarding activity?</string>
    <string name="enter_purchases_total">Enter Purchases Total</string>
    <string name="send_email">Send Email?</string>
    <string name="prime_smart_reward">PRIME SMART REWARD</string>
    <string-array name="setting_items2">
        <item>Communication paras</item>
        <item>Transaction paras</item>
        <item>Print paras</item>
    </string-array>
    <string-array name="exact_matchs">
        <item>not included</item>
        <item>sensitive</item>
        <item>insensitive</item>
    </string-array>
    <string-array name="redeems">
        <item>Points Redeem</item>
        <item>Dollars Redeem</item>
        <item>Reward To Redeem</item>
    </string-array>
    <string-array name="redeems_type">
        <item>custom_points_redeem</item>
        <item>custom_dollars_redeem</item>
        <item>reward_to_redeem</item>
    </string-array>
    <string-array name="includes">
        <item>Y</item>
        <item>N</item>
    </string-array>
    <string-array name="lps">
        <item>Campaign</item>
        <item>Deactivated</item>
        <item>Reward</item>
        <item>Promo</item>
        <item>BuyX Item</item>
        <item>Depreciation</item>
        <item>Fee</item>
    </string-array>
    <string-array name="type_restrict_value">
        <item>Giftcard</item>
        <item>BuyX</item>
        <item>Events</item>
        <item>Earned-per-Event</item>
        <item>Points</item>
    </string-array>
    <string-array name="type_restrict">
        <item>giftcard</item>
        <item>buyx</item>
        <item>events</item>
        <item>earned</item>
        <item>points</item>
    </string-array>
    <string-array name="bes">
        <item>User - New</item>
        <item>Users - List</item>
        <item>User Information</item>
        <item>Change Password</item>
    </string-array>
    <string-array name="user_permission_levels">
        <item>A</item>
        <item>M</item>
        <item>S</item>
        <item>N</item>
        <item>G</item>
        <item>I</item>
        <item>K</item>
        <item>P</item>
        <item>F</item>
        <item>C</item>
        <item>O</item>
    </string-array>
    <string-array name="user_permission_levels_str">
        <item>Administrator</item>
        <item>Manager</item>
        <item>Associate Manager</item>
        <item>Custom Manager</item>
        <item>Agency Client</item>
        <item>Agency Client + Imports</item>
        <item>Clerk</item>
        <item>Temp</item>
        <item>Fulfillment Contractor</item>
        <item>Accountant</item>
        <item>Observer</item>
    </string-array>
    <string-array name="available_languages">
        <item>DA</item>
        <item>DE</item>
        <item>EN</item>
        <item>ES</item>
        <item>FR</item>
        <item>GE</item>
        <item>IT</item>
        <item>PT</item>
        <item>PT-BR</item>
        <item>NO</item>
        <item>TR</item>
    </string-array>
    <string-array name="available_languages_str">
        <item>Dansk</item>
        <item>Deutch</item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>ქართული ენა</item>
        <item>Italiano</item>
        <item>Português</item>
        <item>Português - Brasil</item>
        <item>Norsk</item>
        <item>Türkçe</item>
    </string-array>
</resources>