<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg_color"
    android:orientation="vertical"
    tools:context="com.extra.loyalty.view.activity.UserUpdateActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/all_bg_color"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"/>

                <TextView
                    android:id="@+id/et_user_name"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_pass"/>

                <EditText
                    android:id="@+id/et_user_password"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_first_name"/>

                <EditText
                    android:id="@+id/et_user_first_name"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_last_name"/>

                <EditText
                    android:id="@+id/et_user_last_name"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_custom"/>

                <EditText
                    android:id="@+id/et_user_custom"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_pin"/>

                <EditText
                    android:id="@+id/et_user_pin"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"/>

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/ns_language"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/english"  />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timezone"/>

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/ns_timezone"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/timezones"  />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_role"/>

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/ns_user_role"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/admin" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allowed_campaigns"/>

                <TextView
                    android:id="@+id/tv_allowed_campaigns"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/bt_button_bg"
                android:text="@string/create_new_user"
                android:textColor="@color/white"
                android:textSize="18dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
