<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context="com.extra.loyalty.view.activity.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/all_bg_color"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">


        <TextView
            android:id="@+id/tv_loyalty_programs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_10"
            android:text="@string/loyalty_programs"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:background="@drawable/main_bottom"/>
        <TextView
            android:id="@+id/tv_business_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_10"
            android:text="@string/business_employees"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:background="@drawable/main_bottom"/>
        <TextView
            android:id="@+id/tv_customers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_10"
            android:text="@string/customers"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:background="@drawable/main_bottom"/>
        <TextView
            android:id="@+id/tv_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_10"
            android:text="@string/transaction"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:background="@drawable/main_bottom"/>
        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_10"
            android:text="@string/setting_lo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:background="@drawable/main_bottom"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/tv_login_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_10"
            android:text="@string/log_out"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"

            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:background="@drawable/main_bottom"/>
    </LinearLayout>
</LinearLayout>
