<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:padding="@dimen/length_10"
        android:orientation="horizontal"
        android:gravity="center|left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_2"
            android:text="@string/id"/>
        <TextView
            android:id="@+id/tv_id"
            android:layout_marginLeft="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/hint"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/length_10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_2"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_marginLeft="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/hint"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_2"
            android:text="@string/type"/>
        <TextView
            android:id="@+id/tv_type"
            android:layout_marginLeft="@dimen/length_10"
            android:layout_marginRight="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/hint"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/saddlebrown"/>

</LinearLayout>