<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/length_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:layout_marginStart="@dimen/length_10"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"><TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"/>
        <TextView
            android:layout_marginStart="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/tv_type"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="@dimen/length_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"/>
        <TextView
            android:layout_marginStart="@dimen/length_10"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:id="@+id/tv_balance"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"><TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cumulative"/>
        <TextView
            android:layout_marginStart="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/tv_cumulative"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="@dimen/length_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_font_8"
            android:text="@string/balance_coalition"/>
        <TextView
            android:layout_marginStart="@dimen/length_10"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:id="@+id/tv_balance_coalition"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_8"
            android:text="@string/cumulative_coalition"/>
        <TextView
            android:layout_marginStart="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/tv_cumulative_coalition"/>
    </LinearLayout>
    </LinearLayout>


</LinearLayout>